--- a/templates/trade-families/amp-results.html
+++ b/templates/trade-families/amp-results.html
@@ -25,7 +25,7 @@
         </div>
         <div class="nhsuk-form-group nhsuk-u-float-right">
             <a href="#" class="nhsuk-button nhsuk-button--secondary">Search</a>
-            <a href="#" class="nhsuk-u-margin-left-3 nhsuk-button nhsuk-button--reverse" style="color: black">Reset</a>
+            <a href="search-amp" class="nhsuk-u-margin-left-3 nhsuk-button nhsuk-button--reverse" style="color: black">Reset</a>
         </div>
     </div>
 </div>
