--- a/templates/trade-families/base.html
+++ b/templates/trade-families/base.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/css/gov.min.scss">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/css/tree.css">
 
   <!-- Favicons -->
   <link rel="shortcut icon" href="/images/favicons/favicon.ico" type="image/x-icon">
