--- a/templates/trade-families/tfg-table-view.html
+++ b/templates/trade-families/tfg-table-view.html
@@ -25,6 +25,16 @@
                         <h1 class="nhsuk-heading-xl">Trade family groups</h1>
                     </div>
                 </div>
+                <div class="nhsuk-grid-row">
+                    <div class="nhsuk-grid-column-full">
+                        <label for="filter" class="nhsuk-label">Filter by name</label>
+                        <input id="filter" class="nhsuk-input govuk-!-margin-bottom-4" type="text"/>
+                        <a href="#" class="nhsuk-button nhsuk-button--secondary" type="submit"
+                           id="searchButton">Search</a>
+                        <a class="nhsuk-button nhsuk-button--reverse" style="color: black"
+                           id="resetFilters" href="#">Reset filter </a>
+                    </div>
+                </div>
                 <table class="nhsuk-table">
                     <caption class="nhsuk-table__caption">Trade family groups details</caption>
                     <thead role="rowgroup" class="nhsuk-table__head">
