--- a/templates/trade-families/view-tfg.html
+++ b/templates/trade-families/view-tfg.html
@@ -66,7 +66,7 @@
     </thead>
     <tbody class="nhsuk-table__body">
     <tr role="row" class="nhsuk-table__row">
-        <td class="nhsuk-table__cell">1 Primary Wound</td>
+        <td class="nhsuk-table__cell"><a href="view-tf" class="nhsuk-link--no-visited-state">1 Primary Wound</a></td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
@@ -74,7 +74,7 @@
         </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
-        <td class="nhsuk-table__cell">Primary Wound (clotrimazole)</td>
+        <td class="nhsuk-table__cell"><a href="#" class="nhsuk-link--no-visited-state">Primary Wound (clotrimazole)</a></td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
@@ -82,7 +82,7 @@
         </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
-        <td class="nhsuk-table__cell">Primary Wound (fluconazole)</td>
+        <td class="nhsuk-table__cell"><a href="#" class="nhsuk-link--no-visited-state">Primary Wound (fluconazole)</a></td>
         <td class="nhsuk-table__cell ">Invalid</td>
         <td class="nhsuk-table__cell ">False</td>
         <td class="nhsuk-table__cell">
@@ -91,6 +91,25 @@
     </tr>
     </tbody>
 </table>
+<div class="nhsuk-u-margin-top-6">
+    <div id="pagination">
+        <nav aria-label="Pagination Navigation">
+            <ul class="pagination">
+                <li class="pagination__item">Previous</li>
+                <li class="pagination__item">|</li>
+                <li class="pagination__item">
+                    <p class="pagination__link nhsuk-u-font-weight-bold" aria-current="true">1</p>
+                </li>
+                <li class="pagination__item">
+                    <a class="pagination__link" href="#">2</a>
+                </li>
+                <li class="pagination__item">|</li>
+                <li class="pagination__item"><a href="#">Next</a></li>
+
+            </ul>
+        </nav>
+    </div>
+</div>
 <a class="nhsuk-button" href="#">Link trade family</a>
 
 {% endblock %}
