updated view state of links

--- a/templates/trade-families/add-amp.html
+++ b/templates/trade-families/add-amp.html
@@ -198,8 +198,7 @@
                             </span>
                                 </summary>
                                 <ul class="nhsuk-u-margin-top-3">
-                                    <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound Dressing spray
-                                        (Phytoceuticals Ltd)</a></li>
+                                    <li>1 Primary Wound Dressing spray (Phytoceuticals Ltd)</li>
                                     <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound small
                                         (Phytoceuticals Ltd)</a></li>
                                     <li><a href="#" class="nhsuk-link--no-visited-state">1 Primary Wound medium
