--- a/templates/trade-families/view-tf.html
+++ b/templates/trade-families/view-tf.html
@@ -23,7 +23,7 @@
             01 January 2020
         </dd>
         <dd class="nhsuk-summary-list__actions">
-            <a href="#">
+            <a class="nhsuk-link--no-visited-state" href="#">
                 Edit<span class="nhsuk-u-visually-hidden"> start date</span>
             </a>
 
@@ -37,7 +37,7 @@
             05 September 2024
         </dd>
         <dd class="nhsuk-summary-list__actions">
-            <a href="#">
+            <a class="nhsuk-link--no-visited-state" href="#">
                 Edit<span class="nhsuk-u-visually-hidden"> end date</span>
             </a>
         </dd>
@@ -48,7 +48,7 @@
         <br/>
         <h2 class="nhsuk-heading-l">Trade family group</h2>
         <p>This trade family does not belong to a trade family group.
-            <a href="link-tf-to-tfg">Link to trade family group.</a></p>
+            <a class="nhsuk-link--no-visited-state" href="link-tf-to-tfg">Link to trade family group.</a></p>
     </div>
 </div><br/>
 <div class="nhsuk-grid-row">
@@ -146,28 +146,28 @@
             </thead>
             <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-                <td class="nhsuk-table__cell">1 Primary Wound</td>
+                <td class="nhsuk-table__cell"><a class="nhsuk-link--no-visited-state" href="add-amp">1 Primary Wound Dressing spray</a></td>
                 <td class="nhsuk-table__cell ">Valid</td>
                 <td class="nhsuk-table__cell ">True</td>
                 <td class="nhsuk-table__cell ">01/01/2020</td>
                 <td class="nhsuk-table__cell ">01/02/3456</td>
-                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
+                <td class="nhsuk-table__cell "><a class="nhsuk-link--no-visited-state" href="#">Remove</a></td>
             </tr>
             <tr role="row" class="nhsuk-table__row">
-                <td class="nhsuk-table__cell">1 Primary Wound small</td>
+                <td class="nhsuk-table__cell"><a class="nhsuk-link--no-visited-state" href="#">1 Primary Wound small</a></td>
                 <td class="nhsuk-table__cell ">Valid</td>
                 <td class="nhsuk-table__cell ">True</td>
                 <td class="nhsuk-table__cell ">15/11/2024</td>
                 <td class="nhsuk-table__cell ">05/06/2027</td>
-                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
+                <td class="nhsuk-table__cell "><a class="nhsuk-link--no-visited-state" href="#">Remove</a></td>
             </tr>
             <tr role="row" class="nhsuk-table__row">
-                <td class="nhsuk-table__cell">1 Primary Wound medium</td>
+                <td class="nhsuk-table__cell"><a class="nhsuk-link--no-visited-state" href="#">1 Primary Wound medium</a></td>
                 <td class="nhsuk-table__cell ">Invalid</td>
                 <td class="nhsuk-table__cell ">False</td>
                 <td class="nhsuk-table__cell ">21/02/2005</td>
                 <td class="nhsuk-table__cell ">01/02/3456</td>
-                <td class="nhsuk-table__cell "><a href="#">Remove</a></td>
+                <td class="nhsuk-table__cell "><a class="nhsuk-link--no-visited-state" href="#">Remove</a></td>
             </tr>
             </tbody>
         </table>
