--- a/templates/trade-families/view-tfg.html
+++ b/templates/trade-families/view-tfg.html
@@ -26,7 +26,7 @@
             01 January 2020
         </dd>
         <dd class="nhsuk-summary-list__actions">
-            <a href="#">
+            <a class="nhsuk-link--no-visited-state" href="#">
                 Edit<span class="nhsuk-u-visually-hidden"> start date</span>
             </a>
 
@@ -40,7 +40,7 @@
             05 September 2024
         </dd>
         <dd class="nhsuk-summary-list__actions">
-            <a href="#">
+            <a class="nhsuk-link--no-visited-state" href="#">
                 Edit<span class="nhsuk-u-visually-hidden"> end date</span>
             </a>
         </dd>
@@ -70,7 +70,7 @@
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
-            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+            <a class="nhsuk-link--no-visited-state" href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
         </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
@@ -78,7 +78,7 @@
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
-            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+            <a class="nhsuk-link--no-visited-state" href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
         </td>
     </tr>
     <tr role="row" class="nhsuk-table__row">
@@ -86,7 +86,7 @@
         <td class="nhsuk-table__cell ">Invalid</td>
         <td class="nhsuk-table__cell ">False</td>
         <td class="nhsuk-table__cell">
-            <a href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
+            <a class="nhsuk-link--no-visited-state" href="#">Remove<span class="nhsuk-u-visually-hidden"> tf</span></a>
         </td>
     </tr>
     </tbody>
