--- a/templates/trade-families/selected-amps.html
+++ b/templates/trade-families/selected-amps.html
@@ -145,7 +145,7 @@
 </div>
 <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-        <a href="view-tf" class="nhsuk-button">Save</a>
+        <a href="tf-table-view" class="nhsuk-button">Save</a>
     </div>
 </div>
 <div class="nhsuk-grid-row">
