--- a/templates/trade-families/tfg-table-view.html
+++ b/templates/trade-families/tfg-table-view.html
@@ -43,10 +43,16 @@
                             Name
                         </th>
                         <th role="columnheader" scope="col">
+                            SNOMED Code
+                        </th>
+                        <th role="columnheader" scope="col">
                             Start date
                         </th>
                         <th role="columnheader" scope="col">
                             End date
+                        </th>
+                        <th role="columnheader" scope="col">
+                            Number of TFs
                         </th>
                     </tr>
                     </thead>
@@ -55,22 +61,28 @@
                         <th class="nhsuk-table__header" scope="row">
                             <a href="view-tfg" class="nhsuk-link--no-visited-state">Primary Wound</a>
                         </th>
+                        <td class="nhsuk-table__cell">22002311000001104</td>
                         <td class="nhsuk-table__cell">01/01/2020</td>
                         <td class="nhsuk-table__cell">01/02/3456</td>
+                        <td class="nhsuk-table__cell">3</td>
                     </tr>
                     <tr role="row" class="nhsuk-table__row">
                         <th class="nhsuk-table__header" scope="row">
                             <a href="#" class="nhsuk-link--no-visited-state">TFG1</a>
                         </th>
+                        <td class="nhsuk-table__cell">7987611000001104</td>
                         <td class="nhsuk-table__cell">06/02/2018</td>
                         <td class="nhsuk-table__cell">21/11/2026</td>
+                        <td class="nhsuk-table__cell">21</td>
                     </tr>
                     <tr role="row" class="nhsuk-table__row">
                         <th class="nhsuk-table__header" scope="row">
                             <a href="#" class="nhsuk-link--no-visited-state">TFG2</a>
                         </th>
+                        <td class="nhsuk-table__cell">15181011000001103</td>
                         <td class="nhsuk-table__cell">17/09/2005</td>
                         <td class="nhsuk-table__cell">17/09/2025</td>
+                        <td class="nhsuk-table__cell">14</td>
                     </tr>
                     </tbody>
                 </table>
