--- a/templates/trade-families/view-tfg.html
+++ b/templates/trade-families/view-tfg.html
@@ -45,13 +45,28 @@
             </a>
         </dd>
     </div>
+    <div class="nhsuk-summary-list__row">
+        <dt class="nhsuk-summary-list__key">
+            SNOMED Code
+        </dt>
+        <dd class="nhsuk-summary-list__value">
+            6614511000001108
+        </dd>
+        <dd class="nhsuk-summary-list__value">
+            <span class="govuk-visually-hidden">Not editable</span>
+        </dd>
+    </div>
 </dl>
 <table class="nhsuk-table">
+    <p>Page 1 of 2 (29 total results)</p>
     <caption class="nhsuk-table__caption">Linked trade families</caption>
     <thead role="rowgroup" class="nhsuk-table__head">
     <tr role="row">
         <th role="columnheader" class="" scope="col">
             Name
+        </th>
+        <th role="columnheader" class="" scope="col">
+            SNOMED Code
         </th>
         <th role="columnheader" class="" scope="col">
             Status
@@ -67,6 +82,7 @@
     <tbody class="nhsuk-table__body">
     <tr role="row" class="nhsuk-table__row">
         <td class="nhsuk-table__cell"><a href="view-tf" class="nhsuk-link--no-visited-state">1 Primary Wound</a></td>
+        <td class="nhsuk-table__cell ">1234567890123456</td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
@@ -75,6 +91,7 @@
     </tr>
     <tr role="row" class="nhsuk-table__row">
         <td class="nhsuk-table__cell"><a href="#" class="nhsuk-link--no-visited-state">Primary Wound (clotrimazole)</a></td>
+        <td class="nhsuk-table__cell ">1234567890123456</td>
         <td class="nhsuk-table__cell ">Valid</td>
         <td class="nhsuk-table__cell ">True</td>
         <td class="nhsuk-table__cell">
@@ -83,6 +100,7 @@
     </tr>
     <tr role="row" class="nhsuk-table__row">
         <td class="nhsuk-table__cell"><a href="#" class="nhsuk-link--no-visited-state">Primary Wound (fluconazole)</a></td>
+        <td class="nhsuk-table__cell ">1234567890123456</td>
         <td class="nhsuk-table__cell ">Invalid</td>
         <td class="nhsuk-table__cell ">False</td>
         <td class="nhsuk-table__cell">
