multi page results for ingredients

--- a/templates/tce-2226/result.html
+++ b/templates/tce-2226/result.html
@@ -202,7 +202,7 @@
                                     <tr class="nhsuk-table__row">
                                         <td class="nhsuk-table__cell">
                                             <a id="vtm1"
-                                                href="/tce-2226/vtm-display">
+                                                href="/tce-2226/vtm-display2">
                                                 <span class="nhsuk-u-visually-hidden">null </span>
                                                 <span id="vtm-name-1">Aspirin + Caffeine</span>
                                             </a>
