--- a/templates/tce-2226/vtm-display.html
+++ b/templates/tce-2226/vtm-display.html
@@ -21,7 +21,7 @@
                 <h2 class="nhsuk-heading-l nhsuk-u-visually-hidden">Navigation</h2>
                 <ul class="nhsuk-list">
                     <li><a href="#nameDetails">Name Details</a></li>
-                    <li><a href="#ingredients">VTM Ingredients</a></li>
+                    <li><a href="#ingredients">Ingredients details</a></li>
                     <li><a href="#productCodes">Codes</a></li>
                     <li><a href="#vtmVmps">Virtual Medicinal Products (VMPs)</a></li>
                     <li><a href="#productLinks">Further Links</a></li>
@@ -79,46 +79,38 @@
 
                 <div>
                     <section id="ingredients">
-                        <h2 class="nhsuk-heading-l">VTM Ingredients</h2>
-
-                        <div class="nhsuk-table-responsive">
-                            <table class="nhsuk-table">
-                                <thead class="nhsuk-table__head">
-                                    <tr class="nhsuk-table__row">
-                                        <th class="nhsuk-table__header nhsuk-table__header--sticky" colspan="2">Name
-                                        </th>
-                                        <th class="nhsuk-table__header nhsuk-table__header--sticky nhsuk-u-date-width"
-                                            id="name-start-date-heading" scope="col">Start Date</th>
-                                        <th class="nhsuk-table__header nhsuk-table__header--sticky nhsuk-u-date-width"
-                                            id="name-end-date-heading" scope="col">End Date</th>
-                                    </tr>
-                                </thead>
-                                <tbody class="nhsuk-table__body">
-
-                                    <tr class="nhsuk-table__row">
-                                        <th class="nhsuk-table__header">Name</th>
-                                        <td id="name-value" class="nhsuk-table__cell">
-                                            <span class="nhsuk-table-responsive__heading">Current Name</span>
-                                            Aspirin + Paracetamol
-                                        </td>
-                                        <td id="name-start-date" class="nhsuk-table__cell nhsuk-u--table-date-width">
-                                            <span class="nhsuk-table-responsive__heading" id="name-heading">Start
-                                                Date</span>
-                                            17-01-2006
-                                        </td>
-                                        <td id="name-end-date" class="nhsuk-table__cell nhsuk-u--table-date-width">
-                                            <span class="nhsuk-table-responsive__heading">End Date</span>
-                                        </td>
-                                    </tr>
-
+                        <h2 class="nhsuk-heading-l">Ingredient details</h2>
+                        <table class="nhsuk-table">
+                        
+                            <thead role="rowgroup" class="nhsuk-table__head">
+                              <tr role="row">
+                                <th role="columnheader" class="" scope="col">
+                                  Name
+                                </th>
+                                <th role="columnheader" class="" scope="col">
+                                  Discontinued
+                                </th>
+                              </tr>
+                            </thead>
+                            <tbody class="nhsuk-table__body">
+                              <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">Aspirin</td>
+                                <td class="nhsuk-table__cell "> </td>
+                              </tr>
+                              <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">Aspirin + Paracetamol</td>
+                                <td class="nhsuk-table__cell "> </td>
+                              </tr>
+                              <tr role="row" class="nhsuk-table__row">
+                                <td class="nhsuk-table__cell">Cocaina</td>
+                                <td class="nhsuk-table__cell " ><svg aria-hidden="true" class="nhsuk-icon nhsuk-icon__tick nhsuk-icon__tick-red" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
+                                  </svg></td>
+                              </tr>
+                            </tbody>
+                          </table>
 
 
-
-
-
-                                </tbody>
-                            </table>
-                        </div>
                     </section>
                 </div>
 
